samples/_failures_safe/1761316393_ac4aec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e436af2.c: In function ‘handle_processing’:
./samples/SAFE/__tmp_4e436af2.c:161:20: error: missing terminating " character
  161 |             printf("Invalid event for processing
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4e436af2.c:161:13: error: expected expression at end of input
  161 |             printf("Invalid event for processing
      |             ^~~~~~
./samples/SAFE/__tmp_4e436af2.c:161:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4e436af2.c:161:13: error: expected declaration or statement at end of input
